# pyrelatics-webservices

./: .git-blame-ignore-revs  .gitignore  .pylintrc  CHANGELOG.md  README.md  dev-requirements.txt  example.py  example_workspace.rcs  pyproject.toml  pyrelatics-webservices.code-workspace  pyrelatics2.code-workspace  requirements.txt  run_coverage.bat  setup.py
.github/workflows/: pylint-and-unittest.yml  pylint.yml  python-package-test.yml  python-publish.yml  trying-out-stuff.yml  unittest.yml
docs-Relatics/: SoapEnvelope-RelaticsImportWebservice.xml  SoapEnvelope-RelaticsWebService.xml
pyrelatics2/: __init__.py  client.py  constants.py  exceptions.py  import_result_classes.py  result_classes.py  utils.py  version.py
pyrelatics_webservices/: __init__.py  client.py  config-sample.py
sample-data/: sample_with_references.xlsx  sample_without_references.xlsx
tests/: test_client.py  test_import_result_classes.py  test_result_classes.py
